# RF-DETR-ONNXRuntime-CPP

./: .gitignore  CMakeLists.txt  README.md  engine.cpp  engine.hpp  main.cpp
scripts/: OPTIMIZATION_NOTES.md  comprehensive_benchmark.py  optimize_model.py  optimize_onnx.py  provider_benchmark.py  quantize_compatible.py
